chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/.devenv/
-/.direnv/
-/.pre-commit-config.yaml
-/.terraform*
-/result*
+.devenv/
+.direnv/
+.pre-commit-config.yaml
+.terraform*
+result*
